--- a/package.json
+++ b/package.json
@@ -18,14 +18,30 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@canvasjs/angular-charts": "^1.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@syncfusion/ej2-angular-base": "^30.1.37",
+    "@syncfusion/ej2-angular-charts": "^30.1.37",
+    "@syncfusion/ej2-base": "^30.1.38",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
+    "chart.js": "^3.9.1",
+    "file-saver": "^2.0.5",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.11",
     "@angular/cli": "~13.3.11",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
