--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7d218104-50d7-480a-83a3-96ec15bfc306"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
