--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/Dashboard/"
             },
             "development": {
               "buildOptimizer": false,
