--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "chart.js": "^3.9.1",
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "popper.js": "^1.16.1",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
